frontend/project/src/generated/permissions/parser/ExpressionParser.ts
// Generated from src/generated/permissions/parser/Expression.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ExpressionListener } from "./ExpressionListener";

export class ExpressionParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly ID = 27;
	public static readonly INT = 28;
	public static readonly FLOAT = 29;
	public static readonly STRING = 30;
	public static readonly NEWLINE = 31;
	public static readonly WS = 32;
	public static readonly RULE_parseNumericExpr = 0;
	public static readonly RULE_parseBooleanExpr = 1;
	public static readonly RULE_parseStringExpr = 2;
	public static readonly RULE_expr = 3;
	public static readonly RULE_booleanExpr = 4;
	public static readonly RULE_numericExpr = 5;
	public static readonly RULE_stringExpr = 6;
	public static readonly RULE_comparisonExpr = 7;
	public static readonly RULE_variable = 8;
	public static readonly RULE_args = 9;
	public static readonly RULE_funcCall = 10;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"parseNumericExpr", "parseBooleanExpr", "parseStringExpr", "expr", "booleanExpr", 
		"numericExpr", "stringExpr", "comparisonExpr", "variable", "args", "funcCall",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'&&'", "'||'", "'!'", "'true'", "'false'", "'('", "')'", "'*'", 
		"'/'", "'+'", "'-'", "'%'", "'>>'", "'<<'", "'&'", "'|'", "'=='", "'!='", 
		"'<'", "'<='", "'>'", "'>='", "'['", "']'", "'.'", "','",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "ID", 
		"INT", "FLOAT", "STRING", "NEWLINE", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ExpressionParser._LITERAL_NAMES, ExpressionParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ExpressionParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Expression.g4"; }

	// @Override
	public get ruleNames(): string[] { return ExpressionParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ExpressionParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ExpressionParser._ATN, this);
	}
	// @RuleVersion(0)
	public parseNumericExpr(): ParseNumericExprContext {
		let _localctx: ParseNumericExprContext = new ParseNumericExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ExpressionParser.RULE_parseNumericExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 22;
			this.numericExpr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parseBooleanExpr(): ParseBooleanExprContext {
		let _localctx: ParseBooleanExprContext = new ParseBooleanExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ExpressionParser.RULE_parseBooleanExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 24;
			this.booleanExpr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parseStringExpr(): ParseStringExprContext {
		let _localctx: ParseStringExprContext = new ParseStringExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ExpressionParser.RULE_parseStringExpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 26;
			this.stringExpr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let _localctx: ExprContext = new ExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ExpressionParser.RULE_expr);
		try {
			this.state = 31;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 28;
				this.booleanExpr(0);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 29;
				this.numericExpr(0);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 30;
				this.stringExpr(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public booleanExpr(): BooleanExprContext;
	public booleanExpr(_p: number): BooleanExprContext;
	// @RuleVersion(0)
	public booleanExpr(_p?: number): BooleanExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: BooleanExprContext = new BooleanExprContext(this._ctx, _parentState);
		let _prevctx: BooleanExprContext = _localctx;
		let _startState: number = 8;
		this.enterRecursionRule(_localctx, 8, ExpressionParser.RULE_booleanExpr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				{
				_localctx = new BooleanNotContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 34;
				this.match(ExpressionParser.T__2);
				this.state = 35;
				this.booleanExpr(7);
				}
				break;

			case 2:
				{
				_localctx = new BooleanCompContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 36;
				this.comparisonExpr();
				}
				break;

			case 3:
				{
				_localctx = new BooleanFuncContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 37;
				this.funcCall();
				}
				break;

			case 4:
				{
				_localctx = new BooleanTrueValContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 38;
				this.match(ExpressionParser.T__3);
				}
				break;

			case 5:
				{
				_localctx = new BooleanFalseValContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 39;
				this.match(ExpressionParser.T__4);
				}
				break;

			case 6:
				{
				_localctx = new BooleanVarContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 40;
				this.variable();
				}
				break;

			case 7:
				{
				_localctx = new ParensBoolContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 41;
				this.match(ExpressionParser.T__5);
				this.state = 42;
				this.booleanExpr(0);
				this.state = 43;
				this.match(ExpressionParser.T__6);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 55;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 53;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
					case 1:
						{
						_localctx = new BooleanAndContext(new BooleanExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_booleanExpr);
						this.state = 47;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 48;
						this.match(ExpressionParser.T__0);
						this.state = 49;
						this.booleanExpr(10);
						}
						break;

					case 2:
						{
						_localctx = new BooleanOrContext(new BooleanExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_booleanExpr);
						this.state = 50;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 51;
						this.match(ExpressionParser.T__1);
						this.state = 52;
						this.booleanExpr(9);
						}
						break;
					}
					}
				}
				this.state = 57;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public numericExpr(): NumericExprContext;
	public numericExpr(_p: number): NumericExprContext;
	// @RuleVersion(0)
	public numericExpr(_p?: number): NumericExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: NumericExprContext = new NumericExprContext(this._ctx, _parentState);
		let _prevctx: NumericExprContext = _localctx;
		let _startState: number = 10;
		this.enterRecursionRule(_localctx, 10, ExpressionParser.RULE_numericExpr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				{
				_localctx = new NumericFuncContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 59;
				this.funcCall();
				}
				break;

			case 2:
				{
				_localctx = new NumericValIntContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 60;
				this.match(ExpressionParser.INT);
				}
				break;

			case 3:
				{
				_localctx = new NumericValFloatContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 61;
				this.match(ExpressionParser.FLOAT);
				}
				break;

			case 4:
				{
				_localctx = new NumericVarContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 62;
				this.variable();
				}
				break;

			case 5:
				{
				_localctx = new ParensNumContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 63;
				this.match(ExpressionParser.T__5);
				this.state = 64;
				this.numericExpr(0);
				this.state = 65;
				this.match(ExpressionParser.T__6);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 98;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 96;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
					case 1:
						{
						_localctx = new NumericMulContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 69;
						if (!(this.precpred(this._ctx, 14))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 14)");
						}
						this.state = 70;
						this.match(ExpressionParser.T__7);
						this.state = 71;
						this.numericExpr(15);
						}
						break;

					case 2:
						{
						_localctx = new NumericDivContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 72;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 73;
						this.match(ExpressionParser.T__8);
						this.state = 74;
						this.numericExpr(14);
						}
						break;

					case 3:
						{
						_localctx = new NumericAddContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 75;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 76;
						this.match(ExpressionParser.T__9);
						this.state = 77;
						this.numericExpr(13);
						}
						break;

					case 4:
						{
						_localctx = new NumericSubContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 78;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 79;
						this.match(ExpressionParser.T__10);
						this.state = 80;
						this.numericExpr(12);
						}
						break;

					case 5:
						{
						_localctx = new NumericModContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 81;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 82;
						this.match(ExpressionParser.T__11);
						this.state = 83;
						this.numericExpr(11);
						}
						break;

					case 6:
						{
						_localctx = new NumericBitShiftRightContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 84;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 85;
						this.match(ExpressionParser.T__12);
						this.state = 86;
						this.numericExpr(10);
						}
						break;

					case 7:
						{
						_localctx = new NumericBitShiftLeftContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 87;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 88;
						this.match(ExpressionParser.T__13);
						this.state = 89;
						this.numericExpr(9);
						}
						break;

					case 8:
						{
						_localctx = new NumericBitAndContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 90;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 91;
						this.match(ExpressionParser.T__14);
						this.state = 92;
						this.numericExpr(8);
						}
						break;

					case 9:
						{
						_localctx = new NumericBitOrContext(new NumericExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_numericExpr);
						this.state = 93;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 94;
						this.match(ExpressionParser.T__15);
						this.state = 95;
						this.numericExpr(7);
						}
						break;
					}
					}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public stringExpr(): StringExprContext;
	public stringExpr(_p: number): StringExprContext;
	// @RuleVersion(0)
	public stringExpr(_p?: number): StringExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: StringExprContext = new StringExprContext(this._ctx, _parentState);
		let _prevctx: StringExprContext = _localctx;
		let _startState: number = 12;
		this.enterRecursionRule(_localctx, 12, ExpressionParser.RULE_stringExpr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				{
				_localctx = new StringFuncContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 102;
				this.funcCall();
				}
				break;

			case 2:
				{
				_localctx = new StringValContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 103;
				this.match(ExpressionParser.STRING);
				}
				break;

			case 3:
				{
				_localctx = new StringVarContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 104;
				this.variable();
				}
				break;

			case 4:
				{
				_localctx = new ParensStringContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 105;
				this.match(ExpressionParser.T__5);
				this.state = 106;
				this.stringExpr(0);
				this.state = 107;
				this.match(ExpressionParser.T__6);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 116;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new StringConcatContext(new StringExprContext(_parentctx, _parentState));
					this.pushNewRecursionContext(_localctx, _startState, ExpressionParser.RULE_stringExpr);
					this.state = 111;
					if (!(this.precpred(this._ctx, 5))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
					}
					this.state = 112;
					this.match(ExpressionParser.T__9);
					this.state = 113;
					this.stringExpr(6);
					}
					}
				}
				this.state = 118;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public comparisonExpr(): ComparisonExprContext {
		let _localctx: ComparisonExprContext = new ComparisonExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ExpressionParser.RULE_comparisonExpr);
		try {
			this.state = 143;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				_localctx = new ComparisonEqContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 119;
				this.numericExpr(0);
				this.state = 120;
				this.match(ExpressionParser.T__16);
				this.state = 121;
				this.numericExpr(0);
				}
				break;

			case 2:
				_localctx = new ComparisonNeqContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 123;
				this.numericExpr(0);
				this.state = 124;
				this.match(ExpressionParser.T__17);
				this.state = 125;
				this.numericExpr(0);
				}
				break;

			case 3:
				_localctx = new ComparisonLtContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 127;
				this.numericExpr(0);
				this.state = 128;
				this.match(ExpressionParser.T__18);
				this.state = 129;
				this.numericExpr(0);
				}
				break;

			case 4:
				_localctx = new ComparisonLeqContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 131;
				this.numericExpr(0);
				this.state = 132;
				this.match(ExpressionParser.T__19);
				this.state = 133;
				this.numericExpr(0);
				}
				break;

			case 5:
				_localctx = new ComparisonGtContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 135;
				this.numericExpr(0);
				this.state = 136;
				this.match(ExpressionParser.T__20);
				this.state = 137;
				this.numericExpr(0);
				}
				break;

			case 6:
				_localctx = new ComparisonGeqContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 139;
				this.numericExpr(0);
				this.state = 140;
				this.match(ExpressionParser.T__21);
				this.state = 141;
				this.numericExpr(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variable(): VariableContext {
		let _localctx: VariableContext = new VariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ExpressionParser.RULE_variable);
		try {
			let _alt: number;
			_localctx = new VariableExprContext(_localctx);
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.match(ExpressionParser.ID);
			this.state = 154;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 146;
					this.match(ExpressionParser.T__22);
					this.state = 149;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case ExpressionParser.INT:
						{
						this.state = 147;
						(_localctx as VariableExprContext)._index = this.match(ExpressionParser.INT);
						}
						break;
					case ExpressionParser.STRING:
						{
						this.state = 148;
						(_localctx as VariableExprContext)._key = this.match(ExpressionParser.STRING);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 151;
					this.match(ExpressionParser.T__23);
					}
					}
				}
				this.state = 156;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			}
			this.state = 161;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 157;
					this.match(ExpressionParser.T__24);
					this.state = 158;
					this.variable();
					}
					}
				}
				this.state = 163;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public args(): ArgsContext {
		let _localctx: ArgsContext = new ArgsContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ExpressionParser.RULE_args);
		let _la: number;
		try {
			this.state = 173;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ExpressionParser.T__2:
			case ExpressionParser.T__3:
			case ExpressionParser.T__4:
			case ExpressionParser.T__5:
			case ExpressionParser.ID:
			case ExpressionParser.INT:
			case ExpressionParser.FLOAT:
			case ExpressionParser.STRING:
				_localctx = new ArgListContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 164;
				this.expr();
				this.state = 169;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ExpressionParser.T__25) {
					{
					{
					this.state = 165;
					this.match(ExpressionParser.T__25);
					this.state = 166;
					this.expr();
					}
					}
					this.state = 171;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case ExpressionParser.T__6:
				_localctx = new NoArgsContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public funcCall(): FuncCallContext {
		let _localctx: FuncCallContext = new FuncCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, ExpressionParser.RULE_funcCall);
		try {
			_localctx = new FunctionCallContext(_localctx);
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 175;
			this.match(ExpressionParser.ID);
			this.state = 176;
			this.match(ExpressionParser.T__5);
			this.state = 177;
			this.args();
			this.state = 178;
			this.match(ExpressionParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public sempred(_localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 4:
			return this.booleanExpr_sempred(_localctx as BooleanExprContext, predIndex);

		case 5:
			return this.numericExpr_sempred(_localctx as NumericExprContext, predIndex);

		case 6:
			return this.stringExpr_sempred(_localctx as StringExprContext, predIndex);
		}
		return true;
	}
	private booleanExpr_sempred(_localctx: BooleanExprContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 9);

		case 1:
			return this.precpred(this._ctx, 8);
		}
		return true;
	}
	private numericExpr_sempred(_localctx: NumericExprContext, predIndex: number): boolean {
		switch (predIndex) {
		case 2:
			return this.precpred(this._ctx, 14);

		case 3:
			return this.precpred(this._ctx, 13);

		case 4:
			return this.precpred(this._ctx, 12);

		case 5:
			return this.precpred(this._ctx, 11);
